--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
-  "name": "PRABATH-MD (3.0.0)",
-  "description": "PRABATH-MD has been designed to make things easier and fun while using WhatsApp. 👨‍💻❤️",
+  "name": "SACHI-MD (3.0.0)",
+  "description": "SACHI-MD has been designed to make things easier and fun while using WhatsApp. 👨‍💻❤️",
   "logo": "https://i.ibb.co/YnKwtFV/50d27b64cf679379.jpg",
-  "keywords": ["nodejs", "bot", "whatsapp bot", "multi device", "prabath-md"],
+  "keywords": ["nodejs", "bot", "whatsapp bot", "multi device", "SACHI-md"],
   "success_url": "/",
 
   "env": {
     "BOT_NUMBER": {
-      "description": "Put the number here.",
+      "description": "94778936490.",
       "required": true
     },  
 
